# pokerit

./: .dockerignore  .env.example  .gitignore  Dockerfile  JUPYTER_SETUP.md  README.md  TODO.md  Untitled.ipynb  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
extension/: background.js  content.js  manifest.json  popup.html  popup.js
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
logs/: prompts.jsonl
migrations/: env.py
migrations/versions/: 0001_account_management.py  0002_conversations.py  0003_pinned_context.py  0004_action_stack_after.py  0005_hand_player_position.py  0006_conversation_entry_point.py  0007_game_evaluations.py  0008_player_profiles.py
notebooks/: Getting_Started.ipynb
scripts/: init_db.py  play_bots.py  play_game.py
src/: __main__.py  main.py
src/ai/: engine.py
src/database/: manager.py  models.py
src/game/: state.py
src/gui/: main.py
src/poker_engine/: __init__.py  config.py  engine.py  hand_eval.py  pk_adapter.py  recorder.py  stats.py
src/poker_trainer/: __init__.py  jobs.py  main.py  worker.py  ws.py
src/shared_services/: hand_formatter.py  llm.py  logging_config.py  table_formatter.py
src/vision/: capture.py  recognition.py
tests/: conftest.py
tests/ai_functions/: test_executors.py  test_loop.py  test_schemas.py
tests/poker_engine/: test_stats.py  test_stats_db.py
tests/poker_trainer/: test_game_evaluation_api.py  test_games_stats_api.py  test_profile_correction_api.py  test_ws_stats_update.py
(+61 files in other folders)
