[project]
name = "poker-trainer"
version = "0.1.0"
description = "Poker webapp using PokerKit for game engine and hand evaluation"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pokerkit>=0.7.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "alembic>=1.13",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poker_trainer", "src/poker_engine"]
